# thales

./: .clinerules  .gitignore  README.md  kb  pyproject.toml  requirements.txt  test_ontology.py  thales.code-workspace
memory-bank/: activeContext.md  mcp_client_requirements.md  next_priorities.md  productContext.md  progress.md  projectbrief.md  session_summary_2025-06-22.md  session_summary_2025-06-23.md  session_summary_2025-06-26.md  systemPatterns.md  techContext.md
src/: mcp_test_file.txt  test_field_fix.py
src/thales/: __init__.py  main copy.py  main.py
src/thales/agents/: __init__.py  discovery.py
src/thales/agents/base/: __init__.py  base.py  baseAgent.py
src/thales/agents/ontology/: __init__.py  identity.py  ontology.py  tasks.py
src/thales/agents/tests/: debug_field_issue.py  manual_test_agent.py
src/thales/llm/: __init__.py  models.py
src/thales/llm/client/: __init__.py  anthropic_client.py  base.py  openai_client.py
src/thales/llm/prompts/: __init__.py  goal_decomposition.py
src/thales/mcp/: __init__.py
src/thales/mcp/client/: __init__.py  client.py
src/thales/mcp/server/: __init__.py  context_db.py  context_db_server.py  math_server.py  mcpServerManager.py  mcp_config.py
src/thales/mcp/tests/: test_config.py  test_enhanced_client.py
src/thales/rag/: README.md  __init__.py
src/thales/rag/data/: README.md  __init__.py  models.py
src/thales/rag/document_manager/: README.md  __init__.py
src/thales/rag/graph/: README.md  __init__.py  base.py  dummy.py
src/thales/rag/search/: README.md  __init__.py  agent.py
src/thales/rag/tests/: __init__.py  test_chroma_vector_store.py  test_rag_workflow.py  test_search_agent.py
src/thales/utils/: __init__.py
test_chroma_db/: chroma.sqlite3
(+53 files in other folders)
